--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/fontawesome/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="container">
+        <h2 class="result__title">Add new task</h2>
         <form action="" class="form">
             <input type="text" class="input__search">
             <button class="button">Отправить</button>
         </form>
-    
-        <div class="result"></div>
+        <div class="tasks">
+            <h2 class="result__title">Your tasks</h2>
+
+            <div class="result">
+            </div>
+        </div>
+
     </div>
-   
+
 
 
     <script src="script.js"></script>
