wotk with weather api

--- a/index.html
+++ b/index.html
@@ -25,10 +25,29 @@
         </div>
 
     </div>
+    <div class="weather">
+        <div class="weather-mini">
+            <div class="weather-mini__weather"></div>
+            
+            <div class="weather-mini__temp"></div>
+            <div class="weather-mini__date"></div>
+            <div class="weather-mini__city"></div>
+           
+            <div class="arrow-icon">
+                <span class="left-bar"></span>
+                <span class="right-bar"></span>
+            </div>
+        </div>
+        <div class="weather__container">
+
+        </div>
+
+    </div>
 
 
 
     <script src="script.js"></script>
+    <script src="weather.js"></script>
 </body>
 
 </html>
